Не надо тратить ману на новые скины

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,13 @@ html(lang="en")
 
     body
         div#cursor
-        div#board
+        div#container
+            div#board
+            nav
+                kbd(style="background: #00adef") 1
+                kbd(style="background: #ff9dcc") 2
+                kbd(style="background: #ffff76") 3
+                kbd(style="background: #000") 4
         button#start Start!
         
 script(src="index.js" inline)
