--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
     $tileColor: #dcdcdc;
     $tileSize: 2em;
     min-height: 100vh;
@@ -27,6 +26,7 @@ body {
 
 #cursor {
     $cursorWidth: 20px;
+    z-index: 20;
     visibility: hidden;
     transform: translate(var(--mouse-x),var(--mouse-y)) scale(var(--cursorScale));
     width: $cursorWidth;
@@ -34,18 +34,23 @@ body {
     background: var(--theme);
     position: absolute;
     border-radius: 0.25em;
-    top: 0;
+    top: -40px;
     bottom: 0;
     margin: auto;
     left: 0;
     right: 0;
 }
 
+#container {
+    visibility: hidden;
+    position: absolute;
+    z-index: 10;
+}
+
 #board {
     $borderWidth: .5em;
     width: calc(var(--board-w) + #{$borderWidth});
     height: calc(var(--board-h) + #{$borderWidth});
-    position: absolute;
     background: #333;
     z-index: -1;
     border-radius: $borderWidth;
@@ -56,7 +61,25 @@ body {
     button#start {
         visibility: hidden;
     }
-    #cursor {
+    #cursor, #container {
         visibility: visible
+    }
+}
+
+nav {
+    height: 40px;
+    display: flex;
+    justify-content: stretch;
+    kbd {
+        border-radius: 3px 0 3px 0;
+        box-shadow: 0 1px 1px rgba(0,0,0,.2),0 2px 0 0 rgba(255,255,255,.7) inset;
+        color: #fff;
+        text-shadow: 0px 1px 1px #000;
+        padding: 0 .5em;
+        margin: 0.5em;
+        flex: 1 1 100%;
+        text-align: center;
+        line-height: calc(20px + .25em);
+        font-weight: bold;
     }
 }
