--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,7 @@
 html, body {
     margin: 0;
+    user-select: none;
+    overflow: hidden;
 }
 
 html {
@@ -18,10 +20,18 @@ body {
     $tileColor: #dcdcdc;
     $tileSize: 2em;
     min-height: 100vh;
-    background-color: #fff;;
+    background-color: #fff;
     background-image: linear-gradient(45deg, $tileColor 25%, transparent 25%, transparent 75%, $tileColor 75%, $tileColor), linear-gradient(45deg, $tileColor 25%, transparent 25%, transparent 75%, $tileColor 75%, $tileColor);
     background-size: $tileSize $tileSize;
     background-position: 0 0, ($tileSize/2) ($tileSize/2);
+}
+
+@mixin center() {
+    top: -40px;
+    bottom: 0;
+    margin: auto;
+    left: 0;
+    right: 0;
 }
 
 #cursor {
@@ -34,17 +44,44 @@ body {
     background: var(--theme);
     position: absolute;
     border-radius: 0.25em;
-    top: -40px;
-    bottom: 0;
-    margin: auto;
-    left: 0;
-    right: 0;
+    @include center();
 }
 
 #container {
     visibility: hidden;
     position: absolute;
     z-index: 10;
+    overflow: hidden;
+}
+
+.ripple {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    will-change: width height;
+    border-radius: 100%;
+    position: absolute;
+    animation: ripple .5s ease-out;
+    @include center();
+}
+
+@keyframes ripple {
+    to {
+        width: 100px;
+        height: 100px;
+        opacity: 0;
+    }
+}
+
+.enemy {
+    position: absolute;
+    background-color: red;
+    width: 15px;
+    height: 15px;
+    will-change: width height;
+    border-radius: 100%;
+    position: absolute;
+    @include center();
 }
 
 #board {
