Теперь могу увидеть мир другой меняя время

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,7 @@ html(lang="en")
         div#cursor
         div#container
             div#board
+            canvas
             nav
                 kbd(style="background: #00adef") 1
                 kbd(style="background: #ff9dcc") 2
